--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "next": "14.2.22",
+    "next": "^14.2.25",
     "next-auth": "^4.24.10",
     "react": "^18",
     "react-dom": "^18"
